--- a/home/index.html
+++ b/home/index.html
@@ -1,7 +1,14 @@
+<!DOCTYPE html>
 <html>
-<title>我的主页</title>
+<head>
+<meta charset="utf-8">
+<title>个人网站</title>
+</head>
 <body>
-添加Title \n
-sub title.
+ 
+<h1>我的第一个标题</h1>
+ 
+<p>我的第一个段落。</p>
+ 
 </body>
 </html>
